--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fliplet-eslint-config",
+  "name": "fliplet-eslint-config-client",
   "version": "0.1.0",
   "description": "ESLint shareable config for the Fliplet style",
   "license": "Apache-2.0",
