--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eslint-config-fliplet-client",
-  "version": "0.2.0",
+  "name": "eslint-config-fliplet",
+  "version": "0.3.0",
   "description": "ESLint shareable config for the Fliplet style",
   "license": "Apache-2.0",
   "repository": "fliplet/eslint-config-client",
